# pytorch-template-uv

./: README.md  pyproject.toml  pytorch_sample.py  test_cuda.py
